airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T125711.809031+0000/task_id=run_pipeline_4/attempt=1.log
[2026-06-03T12:57:15.730+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T12:57:15.820+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_4 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T12:57:15.836+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_4 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T12:57:15.838+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-03T12:57:15.859+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_4> on 2026-06-03 12:57:11.809031+00:00
[2026-06-03T12:57:15.874+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_4', 'manual__2026-06-03T12:57:11.809031+00:00', '--job-id', '139', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmps_wsv6u5']
[2026-06-03T12:57:15.882+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2128) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T12:57:15.884+0000] {standard_task_runner.py:91} INFO - Job 139: Subtask run_pipeline_4
[2026-06-03T12:57:15.889+0000] {standard_task_runner.py:63} INFO - Started process 2131 to run task
[2026-06-03T12:57:15.972+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_4 manual__2026-06-03T12:57:11.809031+00:00 [running]> on host c3bf940c8326
[2026-06-03T12:57:16.112+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_4' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T12:57:11.809031+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T12:57:11.809031+00:00'
[2026-06-03T12:57:16.115+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T12:57:16.144+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T12:57:16.147+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 4']
[2026-06-03T12:57:16.173+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T12:57:29.896+0000] {subprocess.py:93} INFO - Using CPU. Note: This module is much faster with a GPU.
[2026-06-03T12:57:54.005+0000] {subprocess.py:93} INFO - /home/***/.local/lib/python3.12/site-packages/torch/utils/data/dataloader.py:752: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.
[2026-06-03T12:57:54.007+0000] {subprocess.py:93} INFO -   super().__init__(loader)
[2026-06-03T12:58:39.188+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:58:39.191+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:58:39.194+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T12:58:39.196+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:58:39.199+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T12:58:39.202+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T12:58:39.205+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T12:58:39.207+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T12:58:39.210+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T12:58:39.212+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:58:39.216+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:58:39.218+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T12:58:39.221+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:58:39.223+0000] {subprocess.py:93} INFO - Running pipeline: local_to_postgres_pipeline (storage_to_db)
[2026-06-03T12:58:39.226+0000] {subprocess.py:93} INFO - Loading table: customer (2 rows)
[2026-06-03T12:58:39.229+0000] {subprocess.py:93} INFO - Loading table: data pic1 (91 rows)
[2026-06-03T12:58:39.232+0000] {subprocess.py:93} INFO - Loading table: employee (20 rows)
[2026-06-03T12:58:39.234+0000] {subprocess.py:93} INFO - Loading table: employee_data (100 rows)
[2026-06-03T12:58:39.237+0000] {subprocess.py:93} INFO - Loading table: sample (2 rows)
[2026-06-03T12:58:39.239+0000] {subprocess.py:93} INFO - Loading table: word (12 rows)
[2026-06-03T12:58:39.242+0000] {subprocess.py:93} INFO - Processed total rows: 227
[2026-06-03T12:58:39.244+0000] {subprocess.py:93} INFO - Completed: 227 rows processed
[2026-06-03T12:58:39.247+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T12:58:39.250+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 72, in main
[2026-06-03T12:58:39.252+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T12:58:39.255+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T12:58:39.258+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T12:58:39.260+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T12:58:39.263+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T12:58:39.266+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T12:58:39.268+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:58:39.271+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:58:39.274+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T12:58:39.275+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:58:39.277+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T12:58:39.278+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 111, in <module>
[2026-06-03T12:58:39.279+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T12:58:39.281+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 95, in main
[2026-06-03T12:58:39.282+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T12:58:39.283+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T12:58:39.285+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T12:58:39.286+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T12:58:39.287+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T12:58:39.288+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T12:58:39.289+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:58:41.075+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T12:58:41.077+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T12:58:41.104+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T12:58:41.115+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_4, run_id=manual__2026-06-03T12:57:11.809031+00:00, execution_date=20260603T125711, start_date=20260603T125715, end_date=20260603T125841
[2026-06-03T12:58:41.149+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 139 for task run_pipeline_4 (Bash command failed. The command returned a non-zero exit code 1.; 2131)
[2026-06-03T12:58:41.202+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T12:58:41.263+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T12:58:41.277+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
